# dinbutler

./: .env.sample  .mcp.json.sample  README.md  pyproject.toml
.claude/commands/: prime.md  prime_obox.md  prime_sandbox.md
.gemini/commands/: prime.md  prime_sandbox.md
apps/: __init__.py
apps/sandbox_cli/: __init__.py  main.py
apps/sandbox_cli/commands/: __init__.py  exec.py  files.py  sandbox.py
apps/sandbox_cli/modules/: __init__.py  output.py  state.py
apps/sandbox_mcp/: NEXTSTEPS.md  README.md  __init__.py  server.py
apps/sandbox_workflows/: QUICKSTART.md  README_AGENTS.md  __init__.py  main.py  test_agents.py
apps/sandbox_workflows/commands/: __init__.py  fork.py
apps/sandbox_workflows/modules/: __init__.py  agents.py  constants.py  forks.py  hooks.py  logs.py
apps/sandbox_workflows/prompts/: system_prompt.md
dinbutler/: __init__.py  cli.py  exceptions.py  sandbox.py  sandbox_async.py
dinbutler/models/: __init__.py  commands.py  filesystem.py  sandbox.py
dinbutler/server/: README.md  __init__.py  app.py
dinbutler/server/routes/: __init__.py  commands.py  files.py  sandbox.py
dinbutler/services/: __init__.py  commands.py  docker_client.py  filesystem.py  pty.py  sandbox_manager.py
docs/plans/: claude-code-integration.md
src/dinbutler/: __init__.py  commands.py  execution.py  files.py  sandbox.py
templates/: README.md
templates/default/: Dockerfile
templates/gemini/: Dockerfile
templates/node/: Dockerfile
templates/python/: Dockerfile
tests/: README.md  __init__.py  conftest.py  test_async_sandbox.py  test_execution.py  test_sandbox.py  test_server_integration.py  test_services.py
